--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                   </div>
 
                   <div class="copy">
-                      PowerBy &copy; Ali Ahmad
+                      PowerBy &copy; SahibZada
                   </div>
             </div>
         </div>
